upspoon/gateway/aws-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: upspoon-gw
  name: upspoon-gw
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: upspoon-gw
  type: LoadBalancer
